--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "compression-webpack-plugin": "^1.1.11",
     "muse-ui": "^2.1.0",
     "scss": "^0.2.4",
     "vue": "^2.5.2",
