--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -40,4 +40,4 @@ jobs:
           git config user.email "w-xuefeng@outlook.com"
           git add .
           git commit -am "Feat: Github Action Auto Deploy"    
-          git push --force --quiet "https://${{secrets.token}}@github.com/w-xuefeng/Compiler.git" master:deploy
+          git push --force --quiet "https://${{secrets.token}}@github.com/w-xuefeng/Compiler.git" deploy
