--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -38,6 +38,7 @@ jobs:
           git init
           git config user.name "w-xuefeng"
           git config user.email "w-xuefeng@outlook.com"
+          git checkout -b deploy
           git add .
           git commit -am "Feat: Github Action Auto Deploy"    
           git push --force --quiet "https://${{secrets.token}}@github.com/w-xuefeng/Compiler.git" deploy
